lab1/lab1.sdk/.metadata/.plugins/org.eclipse.cdt.ui/UserTread.build.log
15:06:56 **** Auto Build of configuration Debug for project UserTread ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/main.cpp'
'Invoking: ARM v7 g++ compiler'
arm-none-eabi-g++ -Wall -O0 -g3 -I"C:\Users\Entvex\lab1\lab1.sdk\UserTread\src\os" -c -fmessage-length=0 -MT"src/main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../freertos901_xilinx_bsp_0/ps7_cortexa9_0/include -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.cpp"
../src/main.cpp: In function 'int main()':
../src/main.cpp:77:7: error: 'gk' was not declared in this scope
   if (gk == 0 || fk[var] < gk){
       ^~
../src/main.cpp:48:9: warning: unused variable 'w' [-Wunused-variable]
  double w = 0.8; // Inertial constant
         ^
../src/main.cpp:49:9: warning: unused variable 'c1' [-Wunused-variable]
  double c1 = 1.95; // Cognitive component - more spread
         ^~
../src/main.cpp:51:9: warning: unused variable 'c2' [-Wunused-variable]
  double c2 = 1.98; // Social component global best position
         ^~
../src/main.cpp:52:6: warning: unused variable 'N' [-Wunused-variable]
  int N = 60; // Number of iterations
      ^
../src/main.cpp:63:9: warning: unused variable 'fgk' [-Wunused-variable]
  double fgk = 0;  // Value of best position
         ^~~
make: *** [src/main.o] Error 1

15:06:58 Build Finished (took 1s.389ms)

